<resources>
    <string name="app_name">My city</string>
    <string name="team_1_presents">team 1 presents</string>
    <string name="registration">Регистрация</string>
    <string name="name">Имя</string>
    <string name="sname">Фамилия</string>
    <string name="number">Номер телефона</string>
    <string name="con">Продолжить</string>
    <string name="kyrgiz">Кыргызча</string>
    <string name="russian">Русский</string>
    <string name="main">Главная</string>
    <string name="soo">Сообщество</string>
    <string name="contact_word">Связь</string>
    <string name="contact_organization">Контакты организаций</string>
    <string name="appeal">Обращения</string>
    <string name="photo_problem">Сфотайте проблему</string>
    <string name="camera">Kамера</string>
    <string name="complaint">Жалоба</string>
    <string name="name_of_problem">Дайте краткое название проблемы</string>
    <string name="data">Дата проишествия</string>
    <string name="describe_problem">Опишите проблему</string>
    <string name="sent">Отправить</string>
    <string name="map">Карта</string>
    <string name="soo">Сообщество</string>
    <string name="mapp">Карта</string>
    <string name="contact">Связь</string>
    <string name="appeal">Обращения</string>
</resources>