<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/registration">

        <TextView
            style="@style/dblue_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:text="@string/registration">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginBottom="25dp"
            android:orientation="vertical">

            <TextView
                style="@style/dblue_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="7dp"
                android:text="@string/name">
            </TextView>

            <EditText
                android:autofillHints="name"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:background="#C1D3DB"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginBottom="25dp"
            android:orientation="vertical">

            <TextView
                style="@style/dblue_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="7dp"
                android:text="@string/sname"/>

            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:background="#C1D3DB"
                android:autofillHints="name"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginBottom="25dp"
            android:orientation="vertical">

            <TextView
                style="@style/dblue_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="7dp"
                android:text="@string/number"/>

            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:background="#C1D3DB"
                android:autofillHints="phone">

            </EditText>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="70dp">

        <Button
            style="@style/white25"
            android:layout_width="350dp"
            android:layout_height="75dp"
            android:background="@color/blue_light"
            android:text="@string/con" />

    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>