<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topguide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.005"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/topguide"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topguide1">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                app:srcCompat="@drawable/hamburger" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:fontFamily="@font/visueltpro_regular"
                    android:text="27°"
                    android:textSize="36sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:fontFamily="@font/visueltpro_bold"
                    android:text="Бишкек"
                    android:textSize="36sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/group_6" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topguide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".22"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_white"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/topguide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftguide1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".03"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightguide1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".97"/>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topguide28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".48"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightguide27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".52"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightguide26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".70"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightguide25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".35"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightguide24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".38"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightguide23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".04"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/imageButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rectangle_8"
            android:padding="15dp"
            app:layout_constraintBottom_toTopOf="@+id/rightguide25"
            app:layout_constraintEnd_toStartOf="@+id/topguide28"
            app:layout_constraintStart_toStartOf="@+id/leftguide1"
            app:layout_constraintTop_toTopOf="@+id/rightguide23">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/component_4__3_5798" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/group_54886516" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/visueltpro_bold"
                android:text="@string/soo"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:id="@+id/soo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/imageButton2"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:background="@drawable/rectangle_8"
            android:padding="15dp"
            app:layout_constraintBottom_toTopOf="@+id/rightguide25"
            app:layout_constraintEnd_toStartOf="@+id/rightguide1"
            app:layout_constraintStart_toStartOf="@+id/rightguide27"
            app:layout_constraintTop_toTopOf="@+id/rightguide23">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/group_54886516" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/visueltpro_bold"
                android:text="@string/mapp"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:id="@+id/mapp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/imageButton4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rectangle_8"
            android:padding="15dp"
            app:layout_constraintBottom_toTopOf="@+id/rightguide26"
            app:layout_constraintEnd_toStartOf="@+id/topguide28"
            app:layout_constraintStart_toStartOf="@+id/leftguide1"
            app:layout_constraintTop_toTopOf="@+id/rightguide24">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/group_54886516" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/visueltpro_bold"
                android:text="@string/contact"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:id="@+id/contact"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/imageButton3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rectangle_8"
            android:padding="15dp"
            app:layout_constraintBottom_toTopOf="@+id/rightguide26"
            app:layout_constraintEnd_toStartOf="@+id/rightguide1"
            app:layout_constraintStart_toStartOf="@+id/rightguide27"
            app:layout_constraintTop_toTopOf="@+id/rightguide24">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/component_4__1_" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/group_54886516" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/visueltpro_bold"
                android:text="@string/appeal"
                android:textColor="@color/white"
                android:id="@+id/appeal"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightguide27984"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".3"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightguide6516527"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".70"/>

        <ImageButton
            android:id="@+id/camera"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rectangle_8__1_"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/text5"
            app:layout_constraintEnd_toStartOf="@+id/rightguide6516527"
            app:layout_constraintStart_toStartOf="@+id/rightguide27984"
            app:layout_constraintTop_toTopOf="@+id/rightguide26" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text5"
            android:layout_gravity="center"
            android:fontFamily="@font/visueltpro_bold"
            android:text="Жалоба"
            android:textColor="@color/blue_dark"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton5" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>